--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    "next": "14.2.5",
+    "framer-motion": "^11.3.0",
+    "next": "13.4.7",
     "postcss": "8.4.39",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.3"
