--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.21",
+    "@react-email/tailwind": "^0.0.8",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -21,9 +23,11 @@
     "postcss": "8.4.39",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^0.16.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.3"
   },
